Days are now stored as a BitArray and made a class for constraints (not fully implemented yet)

--- a/FYPTimetablingSoftware.csproj
+++ b/FYPTimetablingSoftware.csproj
@@ -63,6 +63,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constraint.cs" />
     <Compile Include="DNA.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
