--- a/FYPTimetablingSoftware.csproj
+++ b/FYPTimetablingSoftware.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="GeneticAlgorithm.cs" />
     <Compile Include="Klas.cs" />
+    <Compile Include="MyExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
